# winnbot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  deploy.Dockerfile  entrypoint.sh  local_deploy.Dockerfile
.github/workflows/: docker-image.yml  docker-publish.yml
src/: data.txt  main.rs
src/auto/: notify.rs
src/auto/data/: data.txt
src/commands/: 1v1-ranks.txt  2v2-ranks.txt  3v3-ranks.txt  archive.rs  clear.rs  count.rs  echo.rs  fractal.rs  get_rank.py  help.rs  mod.rs  prompt.rs  puzzle.rs  rank.rs  unknown.rs
src/commands/data/: 1v1-ranks.txt  2v2-ranks.txt  3v3-ranks.txt  puzzles.csv
src/commands/data/prox/: proxies.json  proxies_pretty.json
src/commands/data/prox/proxies/: all.txt  http.txt  socks5.txt
src/commands/data/prox/proxies_anonymous/: all.txt  http.txt  socks5.txt
