[package]
name = "winn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serenity = "0.12"
tokio = { version = "1.35", features = ["rt-multi-thread"] }
rusqlite = "0.29"  # Check for the latest version
serde = { version = "1.0", features = ["derive"] }
async-rusqlite = "0.4.0"
